# mXchange

./: Cargo.toml  mail.db
src/: main.rs
src/auth/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/pop3/: handler.rs  mod.rs  session.rs
src/smtp/: handler.rs  mod.rs
tests/: auht_test.py  test.py
