[package]
name = "mXchange"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
hmac = "0.12.1"
md-5 = "0.10.6"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.31.0"
features = ["bundled"]

[dependencies.uuid]
version = "1.8.0"
features = ["v4"]
